feat: Add ALT+N keyboard shortcut to open create options and improve dialog header layout

--- a/src/app/components/create-options-sheet/create-options-sheet.component.html
+++ b/src/app/components/create-options-sheet/create-options-sheet.component.html
@@ -2,9 +2,11 @@
   <h3 class="sheet-title">Create</h3>
 
   @for (option of createOptions; track option.label) {
-    <a mat-list-item (click)="selectOption(option.action)">
-      <mat-icon matListItemIcon>{{ option.icon }}</mat-icon>
-      <span matListItemTitle>{{ option.label }}</span>
-    </a>
+  <a mat-list-item (click)="selectOption(option.action)"
+    (keydown.enter)="selectOption(option.action); $event.preventDefault()"
+    (keydown.space)="selectOption(option.action); $event.preventDefault()" tabindex="0">
+    <mat-icon matListItemIcon>{{ option.icon }}</mat-icon>
+    <span matListItemTitle>{{ option.label }}</span>
+  </a>
   }
 </mat-nav-list>
