--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -1,22 +1,22 @@
-<div class="note-editor-dialog">
-  <!-- Account info in header -->
-  <div dialog-header class="account-banner">
-    <div class="current-account-info">
-      <div class="current-account-avatar">
-        @if (currentAccountAvatar()) {
-        <img [src]="currentAccountAvatar()" alt="Current account avatar" class="account-avatar-img" />
-        } @else {
-        <mat-icon class="account-avatar-icon">account_circle</mat-icon>
-        }
-      </div>
-      <div class="current-account-details">
-        <span class="current-account-name">{{ currentAccountDisplayName() }}</span>
-      </div>
+<!-- Account info in header -->
+<div dialog-header class="account-banner">
+  <div class="current-account-info">
+    <div class="current-account-avatar">
+      @if (currentAccountAvatar()) {
+      <img [src]="currentAccountAvatar()" alt="Current account avatar" class="account-avatar-img" />
+      } @else {
+      <mat-icon class="account-avatar-icon">account_circle</mat-icon>
+      }
+    </div>
+    <div class="current-account-details">
+      <span class="current-account-name">{{ currentAccountDisplayName() }}</span>
     </div>
   </div>
+</div>
 
-  <!-- Content Area -->
-  <div dialog-content class="dialog-content-wrapper" (dragenter)="onDragEnter($event)" (dragover)="onDragOver($event)"
+<!-- Content Area -->
+<div dialog-content class="note-editor-dialog">
+  <div class="dialog-content-wrapper" (dragenter)="onDragEnter($event)" (dragover)="onDragOver($event)"
     (dragleave)="onDragLeave($event)" (drop)="onDrop($event)" [class.drag-over]="isDragOver()">
 
     <!-- Error display -->
