feat: Add trust rank sorting options to people list and adjust trust rank badge positioning

--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -68,6 +68,12 @@
             <mat-radio-button value="reverse" (click)="preventPropagation($event)">
               Reverse
             </mat-radio-button>
+            <mat-radio-button value="trust-desc" (click)="preventPropagation($event)">
+              Trust Rank (High to Low)
+            </mat-radio-button>
+            <mat-radio-button value="trust-asc" (click)="preventPropagation($event)">
+              Trust Rank (Low to High)
+            </mat-radio-button>
             <mat-radio-button value="engagement-desc" (click)="preventPropagation($event)">
               Engagement (High to Low)
             </mat-radio-button>
