--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -8,13 +8,13 @@
 
     <div class="controls-section">
       <!-- Find People Button -->
-      <button mat-flat-button color="accent" routerLink="/people/discover" matTooltip="Discover new people to follow">
+      <button mat-button routerLink="/people/discover" matTooltip="Discover new people to follow">
         <mat-icon>explore</mat-icon>
         Find<span class="hide-tiny"> People</span>
       </button>
 
       <!-- Add Person Button -->
-      <button mat-flat-button color="primary" (click)="openAddPersonDialog()" matTooltip="Add a new person to follow">
+      <button mat-button (click)="openAddPersonDialog()" matTooltip="Add a new person to follow">
         <mat-icon>person_add</mat-icon>
         Add<span class="hide-tiny"> Person</span>
       </button>
