--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="content-container" #contentContainer>
   @if (shouldShowContent()) {
-  <app-note-content [contentTokens]="contentTokens()"></app-note-content>
+  <app-note-content [contentTokens]="contentTokens()" [authorPubkey]="event()?.pubkey"></app-note-content>
 
   @for (mention of eventMentions(); track mention.event.event.id) {
   @if (mention.event.event.kind === 8) {
@@ -22,7 +22,8 @@
     </mat-card-header>
     <mat-card-content>
       <div class="content-container">
-        <app-note-content [contentTokens]="mention.contentTokens"></app-note-content>
+        <app-note-content [contentTokens]="mention.contentTokens"
+          [authorPubkey]="mention.event.event.pubkey"></app-note-content>
       </div>
     </mat-card-content>
   </mat-card>
