fix: Update body height to use 100dvh for better responsiveness

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,7 @@ html {
 // Global styles
 html,
 body {
-  height: 100%;
+  height: 100dvh;
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   overscroll-behavior: none;
