--- a/src/app/app.html
+++ b/src/app/app.html
@@ -114,7 +114,7 @@
           notifications
           }
         </mat-icon>
-        <span>{{ notification.title }}</span>
+        <span>{{ getFormattedNotificationTitle(notification) }}</span>
         <div class="notification-details dimmed">
           {{ notification.timestamp | date: 'short' }}
         </div>
